Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4511

ATS crashes when no_dns_just_forward is configured without parent proxies

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 7.0.0
    • DNS, Parent Proxy
    • None

    Description

      When ATS is configured with:
      CONFIG proxy.config.http.no_dns_just_forward_to_parent INT 1
      (and parent routing is enabled)
      and a request comes in that does not have a parent defined for it in parent.config ATS will abort with the following backtrace:

      FATAL: HttpTransact.cc:7608: failed assertion `s->parent_result.result == PARENT_FAIL`
      ./bin/traffic_server(_ZN12HttpTransact18handle_parent_diedEPNS_5StateE+0x38)[0x6208fe]
      ./bin/traffic_server(_ZN12HttpTransact23HandleCacheOpenReadMissEPNS_5StateE+0x686)[0x60e868]
      ./bin/traffic_server(_ZN6HttpSM32call_transact_and_set_next_stateEPFvPN12HttpTransact5StateEE+0x71)[0x5f118d]
      ./bin/traffic_server(_ZN6HttpSM17handle_api_returnEv+0x102)[0x5dbd74]
      ./bin/traffic_server(_ZN6HttpSM14do_api_calloutEv+0x40)[0x5f876a]
      ./bin/traffic_server(_ZN6HttpSM14set_next_stateEv+0x75)[0x5f1347]
      ./bin/traffic_server(_ZN6HttpSM32call_transact_and_set_next_stateEPFvPN12HttpTransact5StateEE+0x1ae)[0x5f12ca]
      ./bin/traffic_server(_ZN6HttpSM14set_next_stateEv+0xb21)[0x5f1df3]
      ./bin/traffic_server(_ZN6HttpSM32call_transact_and_set_next_stateEPFvPN12HttpTransact5StateEE+0x1ae)[0x5f12ca]
      ./bin/traffic_server(_ZN6HttpSM17handle_api_returnEv+0x102)[0x5dbd74]
      ....
      

      Attachments

        Issue Links

          Activity

            People

              ushachar Uri Shachar
              ushachar Uri Shachar
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: