TS-4511: ATS crashes when no_dns_just_forward is configured without parent proxies